[package]
name = "bittorrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
hex = "0.4.3"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.14"
serde_json = "1.0.116"
sha1 = "0.10.6"
tokio = { version = "1.37.0", features = ["full"] }
urlencoding = "2.1.3"
